responsive to 0px

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <strong>HTML</strong>
       <span>and</span>
       <strong>CSS</strong>
-      <img src="https://scontent-lhr3-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/11039049_10153143983635860_564299254986012934_n.jpg?oh=b2202238b7219718343ff91dd2419e64&oe=5667E681" alt="">
+      <img class="hidden" src="https://scontent-lhr3-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/11039049_10153143983635860_564299254986012934_n.jpg?oh=b2202238b7219718343ff91dd2419e64&oe=5667E681" alt="">
     </h2>
-    <p>
+    <p class="hidden">
       <span>By Dave</span>
       <span>James</span>
     </p>
