--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width" />
 <link rel="stylesheet" href="stylesheet/main.css">
+<link rel="stylesheet" href="stylesheet/banner2.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
   <meta charset="UTF-8">
   <title>Responsive Banners </title>
 </head>
@@ -24,5 +26,15 @@
       <span>James</span>
     </p>
   </div>
+
+  <div class="banner2">
+    <img src="http://www.dixonsretail.com/sites/all/themes/g3d_bootstrap/images/dxnscpwlogo.png" alt="">
+    <div class="p1"></div>
+    <div class="p2"></div>
+    <div class="p3"></div>
+    <div class="p4"></div>
+  </div>
+
+
 </body>
 </html>
